Moved for sqflite to Drift

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   build_runner: ^2.4.13
+  drift: ^2.21.0
+  drift_flutter: ^0.2.1
+  riverpod: ^2.5.3
+  flutter_riverpod: ^2.5.3
+  intl: ^0.19.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -52,16 +59,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  drift_dev: ^2.21.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your job_application_details.dart, so that you can use the icons in
-  # the material Icons class.
+  generate: true # Add this line
   uses-material-design: true
 
   # To add assets to your job_application_details.dart, add an assets section, like this:
