--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,10 +69,8 @@ flutter:
   generate: true # Add this line
   uses-material-design: true
 
-  # To add assets to your job_application_details.dart, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
